<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageCustomerLogo"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/registration" />

        <TextView
            android:id="@+id/welcomeHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/welcomeText"
            android:textColor="@color/colorWelcomeColor"
            android:textSize="34dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/welcomeInfoHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/welcomeHeaderText"
            android:textColor="@color/colorHeaderColor"
            android:textSize="20dp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/firstname"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/prompt_firstname"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/lastname-"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:hint="@string/prompt_lastname"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:singleLine="true" />

        </LinearLayout>

        <EditText
            android:id="@+id/primaryemail"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/prompt_primaryemail"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="15dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/cellphonenumber"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/prompt_cellphonenumber"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="15dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/createapinorpassword"
            android:layout_width="374dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/prompt_creatapinorpassword"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="15dp"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1.0"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_gravity="center"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:text="@string/next_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorTextColor" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
