<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageCustomerLogo"
            android:layout_width="wrap_content"
            android:layout_height="203dp"
            android:contentDescription="@string/todo"
            android:padding="15dp"
            app:srcCompat="@mipmap/grapeidlogo" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="5dp"
            android:padding="15dp"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:paddingLeft="5dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:padding="15dp"
            android:paddingStart="5dp"
            android:singleLine="true"
            android:paddingLeft="5dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="45dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_button"
            android:text="@string/login_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/colorTextColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1.0"
            android:gravity="bottom"
            android:background="@color/colorRegisterNowBKGND"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mNewUserText"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorRegisterNowBKGND"
                android:gravity="center|center_vertical"
                android:text="@string/newuser"
                android:textSize="14sp" />

            <Button
                android:id="@+id/mRegisterNow"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="40dp"
                android:background="@drawable/registernow_button"
                android:text="@string/registernow"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorRegisterNow"
                android:textColorHint="@color/colorRegisterNowBKGND"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
