<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageCustomerLogo"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/takeaselfie" />

        <TextView
            android:id="@+id/selfieInfoHeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/selfieHeaderText"
            android:textColor="@color/colorHeaderColor"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/mRegisterNow"
            android:layout_width="421dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/pressselfie" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="1.0"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:text="@string/next_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorTextColor" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
