<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageCustomerLogo"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@mipmap/governmentid" />

        <TextView
            android:id="@+id/govtIDInfoHeaderText"
            android:layout_width="match_parent"
            android:layout_height="153dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:text="@string/govtIDHeaderText"
            android:textColor="@color/colorHeaderColor"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/label1"
                android:layout_width="53dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/label_one" />

            <RadioGroup
                android:id="@+id/radioSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/usa" />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/foreign" />

            </RadioGroup>


            <ImageView
                android:id="@+id/mRegisterNow"
                android:layout_width="421dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/pressphotoid" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/label2"
                android:layout_width="53dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/label_two" />

            <ImageView
                android:id="@+id/presstoscanphotoid"
                android:layout_width="242dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginRight="30dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/pressphotoid" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/label3"
                android:layout_width="53dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@mipmap/label_three" />

            <ImageView
                android:id="@+id/termsConditions"
                android:layout_width="294dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/termsandcondunchecked" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_gravity="bottom"
            android:layout_weight="1.0"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="center"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="45dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_button"
                android:text="@string/next_button"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/colorTextColor" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
